{
    "usuario" : "Usuario",
    "intro_usuario" : "Email o username",
    "contra" : "Contraseña",
    "intro_contra" : "Contraseña",
    "login" : "Iniciar sesión",
    "registrarse" : "Registrarse",
    "campo_obligatorio" : "Campo obligatorio",
    "olvidado_contra" : "He olvidado mi contraseña",
    "recuperar_contra" : "Recuperar contraseña",
    "txt_recuperar_contra" : "Introduce tu email y te enviaremos un correo para restablecer tu contraseña.",
    "intro_email" : "Introduce el email",
    "cancelar" : "Cancelar",
    "guardar" : "Guardar",
    "enviar" : "Enviar",
    "txt_recuperar_contra2" : "Revisa tu correo para continuar",
    "politica_priv" : "Política de privacidad",
    "term_cond" : "Términos y condiciones",
    "aviso_legal" : "Aviso legal",
    "politica_priv_text" : "Esta aplicación recoge y trata datos personales con la finalidad de permitir el uso de sus funcionalidades, en concreto la gestión de cuentas de usuario. El único dato personal almacenado es el correo electrónico, que se utiliza para la autenticación y gestión de la cuenta. Los datos son tratados sobre la base del consentimiento del usuario al registrarse en la aplicación. La información se almacena de forma segura utilizando servicios de terceros, concretamente Supabase, que actúa como encargado del tratamiento. Los datos se conservarán mientras la cuenta permanezca activa o hasta que el usuario solicite su eliminación. El usuario puede solicitar en cualquier momento el acceso, rectificación o eliminación de sus datos. La aplicación puede mantener la sesión iniciada mediante almacenamiento local seguro para mejorar la experiencia de usuario. La aplicación podrá enviar notificaciones relacionadas con el uso del servicio. El usuario podrá aceptar o rechazar este permiso y gestionarlo desde la configuración de su dispositivo. Se aplican las medidas de seguridad necesarias para proteger la información y evitar accesos no autorizados. Para cualquier cuestión relacionada con la privacidad, el usuario puede contactar a través de dego.application@gmail.com",
    "term_cond_text": "El uso de esta aplicación está sujeto a la aceptación de estas condiciones. El usuario se compromete a proporcionar información veraz durante el registro y a utilizar la aplicación de forma responsable. Queda prohibido el uso de la aplicación para fines ilícitos, así como cualquier intento de vulnerar su seguridad o integridad. El titular se reserva el derecho de modificar o interrumpir el servicio en cualquier momento. El incumplimiento de estas condiciones podrá dar lugar a la suspensión o eliminación de la cuenta del usuario.",
    "aviso_legal_text": "Esta aplicación es un proyecto de carácter personal y académico desarrollado con fines educativos. El acceso y uso de la aplicación implica la aceptación de las condiciones aquí descritas. El usuario se compromete a hacer un uso adecuado de la aplicación y a no emplearla para actividades ilícitas o contrarias a la buena fe. El titular no garantiza la disponibilidad continua del servicio ni la ausencia de errores, y no se hace responsable de los posibles daños derivados del uso de la aplicación. Todos los contenidos, incluyendo código, diseño y elementos visuales, son propiedad del desarrollador o se utilizan bajo licencia, quedando prohibida su reproducción sin autorización.",
    "username" : "Nombre de usuario",
    "nombre" : "Nombre",
    "email" : "Email",
    "repite_contra" : "Repite la contraseña",
    "contras_no_coinciden" : "Las contraseñas no coinciden",
    "intro_nueva_contra" : "Introduce una nueva contraseña",
    "confirmar_email" : "Confirmar email",
    "confirmar_email_text" : "Diríjase a su correo electrónico para confirmar su cuenta.",
    "continuar" : "Continuar",
    "contra_cambiada" : "Contraseña cambiada correctamente",
    "error_credenciales" : "Error: Credenciales incorrectas",
    "error_servidor" : "Error interno del servidor",
    "error_username" : "Error: El nombre de usuario ya está en uso",
    "error_email" : "Error: El email ya está en uso",
    "error_confirma_email": "Por favor, confirma tu correo electrónico",
    "error_internet" : "Error: No hay conexión a internet",
    "error_datos" : "Error al guardar los datos. Inténtalo de nuevo",
    "error_inesperado" : "Ha ocurrido un error inesperado. Inténtalo más tarde",
    "buscar_grupos" : "Buscar grupos...",
    "crear" : "Crear",
    "crear_grupo" : "Crear grupo",
    "exito_crear_usuario" : "Usuario creado con éxito",
    "exito_crear_grupo" : "Grupo creado con éxito",
    "error_carga_usuario" : "Error: No se ha cargado el usuario correctamente",
    "grupos" : "Grupos",
    "error_carga_grupo" : "Error cargando los datos del grupo. Vuelva a intentarlo",
    "miembros" : "Miembros",
    "buscar_miembros" : "Buscar miembros...",
    "anadir_miembro" : "Añadir miembro",
    "anadir_miembro_txt" : "Introduce el username del usuario que quieres añadir en el grupo para enviarle una invitación.",
    "intro_username" : "Introduce el username",
    "invitacion_enviada" : "Invitación enviada",
    "username_no_existe" : "Error: El username ingresado no existe",
    "usuario_pertenece_grupo" : "Error: El usuario ya pertenece al grupo",
    "aceptar" : "Aceptar",
    "rechazar" : "Rechazar",
    "notificaciones" : "Notificaciones",
    "noti_invite_group" : "{user_name} te ha invitado a unirte al grupo {group_name}",
    "@noti_invite_group": {
    "description": "Notificación para invitar a un grupo",
    "placeholders": {
        "user_name": {
        "type": "String"
        },
        "group_name" : {
            "type" : "String"
        }
    }
    },
    "noti_kick_group" : "{user_name} te ha echado del grupo {group_name}",
    "@noti_kick_group": {
    "description": "Notificación para echar de un grupo",
    "placeholders": {
        "user_name": {
        "type": "String"
        },
        "group_name" : {
            "type" : "String"
        }
    }
    },
    "noti_create_vote" : "Iniciada votación {dec_name} en el grupo {group_name}",
    "@noti_create_vote" : {
        "description" : "Iniciada votación",
        "placeholders": {
            "dec_name":{
                "type" : "String"
            },
            "group_name": {
                "type" : "String"
            }
        }
    },
    "noti_create_option" : "Iniciada propuesta de opciones en {dec_name} en el grupo {group_name}",
    "@noti_create_option" : {
        "description" : "Iniciada propuesta de opciones",
        "placeholders": {
            "dec_name":{
                "type" : "String"
            },
            "group_name": {
                "type" : "String"
            }
        }
    },
    "noti_end_vote" : "Terminada votación {dec_name} en el grupo {group_name}",
    "@noti_create_vote" : {
        "description" : "Terminada votación",
        "placeholders": {
            "dec_name":{
                "type" : "String"
            },
            "group_name": {
                "type" : "String"
            }
        }
    },
    "eliminar_miembro" : "Eliminar miembro",
    "eliminar_miembro_txt" : "¿Estás seguro que quieres eliminar a {user_name} del grupo?",
    "@eliminar_miembro_txt" : {
        "description" : "Eliminar un miembro del grupo",
        "placeholders":{
            "user_name":{
                "type":"String"
            }
        }
    },
    "eliminar_miembro_res" : "Miembro eliminado",
    "salir_grupo":  "Salirse del grupo",
    "salir_grupo_txt": "¿Estás seguro que quieres abandonar el grupo?",
    "eliminar_grupo" : "Eliminar grupo",
    "eliminar_grupo_txt" : "¿Estás seguro de que quieres eliminar el grupo?",
    "editar_grupo" : "Editar grupo",
    "usuarios" : "Usuarios",
    "buscar_usuarios" : "Buscar usuarios...",
    "perfil": "Perfil",
    "logout" : "Cerrar sesión",
    "user_edit" : "Usuario modificado",
    "cambiar_email" : "Cambiar email",
    "cambiar_email_text" : "El cambio de email deberá ser confirmado mediante la antigua o nueva cuenta de correo. Para visualizar la actualización en la app es posible que tenga que reiniciar la sesión",
    "editar_usuario" : "Editar usuario",
    "tipo" : "Tipo",
    "cliente" : "Cliente",
    "admin" : "Admin",
    "no_usuario" : "No hay usuario",
    "usuario_eliminado" : "Usuario eliminado",
    "eliminar_usuario" : "Eliminar usuario",
    "eliminar_usuario_text" : "¿Estás seguro de que quieres eliminar al usuario?",
    "eliminar_cuenta" : "Eliminar cuenta",
    "eliminar_cuenta_text" : "¿Estás seguro de que quieres eliminar tu cuenta? Perderás todos tus datos",
    "titulo" : "Título",
    "votacion_unica": "Votación Única",
    "votacion_multiple" : "Votación Múltiple",
    "ruleta" : "Ruleta",
    "ranking" : "Ranking",
    "cientifico" : "Científico",
    "crear_decision" : "Crear decisión",
    "opciones": "Opciones",
    "abrir_opciones": "Abrir opciones",
    "fecha_final_opciones" : "Fecha de finalización de las opciones",
    "fecha_final_opciones_min" : "Fecha opciones",
    "fecha_final_votacion" : "Fecha de finalización de la votación",
    "fecha_final_votacion_min" : "Fecha votación",
    "empezar" : "Empezar",
    "imagen" : "Imagen",
    "descripcion" : "Descripción",
    "descripcion_txt" : "Escribir una descripción",
    "crear_opcion" : "Crear opción",
    "error_tiempo" : "Error: No puedes seleccionar una fecha u hora que ya ha pasado",
    "error_num_opciones" : "Error: Hace falta al menos 2 opciones para poder empezar",
    "exito_crear_decision" : "Decisión creada con éxito",
    "error_tiempos" : "Error: La fecha de votación debe ser posterior a la de opciones",
    "dar_opciones" : "Dar opciones",
    "votar" : "Votar",
    "eliminar_decision" : "Eliminar decisión",
    "eliminar_decision_txt" : "¿Estás seguro de que quieres eliminar la decisión {titulo}",
    "@eliminar_decision_txt" : {
        "description" : "Eliminar decisión",
        "placeholders" : {
            "titulo":{
                "type":"String"
            }
        }
    },
    "exito_eliminar_decision" : "Decisión eliminada con éxito",
    "empezar_votacion" : "Empezar votación",
    "eliminar_opcion" : "Eliminar opción",
    "eliminar_opcion_txt" : "¿Estás seguro de que quieres eliminar la opción {titulo}",
    "@eliminar_opcion_txt" : {
        "description" : "Eliminar opción",
        "placeholders" : {
            "titulo":{
                "type":"String"
            }
        }
    },
    "exito_eliminar_opcion" : "Opción eliminada con éxito",
    "editar_opcion" : "Editar opción",
    "editar_decision" : "Editar decisión",
    "votar" : "Votar",
    "error_ya_votado" : "Error: Ya has votado en esta decisión",
    "edit_decision_votos" : "Ya ha votos registrados, solo se puede modificar la fecha de finalización",
    "votar_ranking" : "Arrastra para ordenar, siendo 1 la más preferente",
    "error_votar_ranking_no_ops": "Error: Todas las opciones deben tener un número",
    "error_votar_ranking_repe" : "Error: Elige un número distinto para cada opción",
    "error_votar_simple_no_ops": "Error: Selecciona una opción para votar",
    "error_votar_multiple_no_ops" : "Error: Selecciona al menos una opción para votar",
    "girar" : "Girar",
    "ganador" : "¡Ganador!",
    "error_ruleta_girar": "Solo puede decidir el creador en decisiones de tipo ruleta",
    "aventura" : "Aventura",
    "animacion" : "Animación",
    "comedia" : "Comedia",
    "crimen" : "Crimen",
    "documental": "Documental",
    "drama" : "Drama",
    "familia" : "Familia",
    "fantasia" : "Fantasía",
    "historia" : "Historia",
    "terror" : "Terror",
    "musica" : "Música",
    "misterio" : "Misterio",
    "romance" : "Romance",
    "ciencia_ficcion" : "Ciencia ficción",
    "pelicula_tv" : "Película de TV",
    "suspense" : "Suspense",
    "belica" : "Bélica",
    "western" : "Western",
    "accion_aventura" : "Acción y Aventura",
    "animacion" : "Animación",
    "comedia" : "Comedia",
    "crimen" : "Crimen",
    "documental" : "Documental",
    "drama" : "Drama",
    "familia" : "Familia",
    "infantil" : "Infantil",
    "misterio" : "Misterio",
    "noticias" : "Noticias",
    "reality_show" : "Reality show",
    "scifi_fantasia" : "Sci-Fi y Fantasía",
    "telenovelas" : "Telenovelas",
    "talk_show" : "Talk show",
    "guerra_politica" : "Guerra y Políticas",
    "que_ver": "¿Qué ver?",
    "peli" : "Peli",
    "serie" : "Serie",
    "tipo" : "Tipo",
    "plataforma" : "Plataforma",
    "genero_peli" : "Género Pelis",
    "genero_serie" : "Género Series",
    "puntuacion" : "Puntuación",
    "rango" : "Rango",
    "duracion_peli" : "Duración peli",
    "estreno" : "Estreno",
    "tipo_pago" : "Tipo de Pago",
    "orden" : "Orden",
    "suscripcion" : "Suscripción",
    "compra" : "Compra",
    "alquiler": "Alquiler",
    "gratis" : "Gratis",
    "mas_populares" : "Más populares",
    "mas_taquilleras" : "Más taquilleras",
    "mas_recientes" : "Más recientes",
    "mejor_valoradas" : "Mejor valoradas",
    "mas_vistas" : "Más vistas",
    "error_opciones_decision_watch" : "Error: Debes seleccionar al menos un apartado de cada categoría",
    "error_titulo" : "Error: Debes introducir un título",
    "generos" : "Géneros",
    "fecha_estreno" : "Fecha de estreno",
    "sinopsis" : "Sinopsis",
    "ver_mas" : "Ver más",
    "terminar_votacion" : "Terminar votación",
    "error_votacion_finalizada" : "Error: La votación ya ha finalizado",
    "no_quedan_opciones" : "No quedan opciones por votar",
    "maximo_resultados": "Máximo de resultados",
    "maximo" : "Máximo",
    "decision_estandar": "Decisión estándar",
    "sugerir_peliculas" : "Sugerir películas o series",
    "disponible" : "Disponible en",
    "duracion" : "Duración",
    "temporadas" : "Temporadas",
    "capitulos_totales" : "Capítulos totales",
    "duracion_cap" : "Duración media por capítulo",
    "estado_emision" : "Estado de emisión",
    "fecha_final" : "Fecha de finalización",
    "reparto" : "Reparto principal",
    "equipo_tecnico" : "Equipo técnico",
    "direccion" : "Dirección", 
    "guion" : "Guion",
    "companias_productoras" : "Compañias productoras",
    "finanzas" : "Finanzas",
    "presupuesto" : "Presupuesto",
    "recaudacion" : "Recaudación mundial",
    "trailer" : "Tráiler",
    "titulos_similares" : "Título similares",
    "emision" : "En emisión",
    "finalizada" : "Finalizada",
    "cancelada" : "Cancelada",
    "piloto" : "Piloto",
    "historial" : "Historial",
    "desempatar" : "Desempatar",
    "decide_creador" : "Decide el creador",
    "error_carga_votos" : "Error en la carga de votos",
    "error_carga_decision" : "Error en la carga de la decisión",
    "error_carga_datos" : "Error en la carga de datos",
    "generar_datos" : "Generar datos",
    "no" : "No",
    "individual" : "Individual"
}