...
                          ),
                        ),
                        SizedBox(width: screenWidth * 0.03),
                        Expanded(
                        child:TextFormField(

                          key: const Key('nameField'),
                          controller: _name,
                          validator:  (value) => value == null || value.isEmpty ? context.lang.campo_obligatorio : null,
                          cursorColor: Colors.grey,
                          textAlign: TextAlign.center,
                          style: TextStyle(
                            color: Colors.black,
...
                          ),
                          ),
                          ),
                        SizedBox(width: screenWidth * 0.03),
                        Expanded(
                        child: TextFormField(
                          key: const Key('passwordField'),
                          validator:  (value) => value == null || value.isEmpty ? context.lang.campo_obligatorio : null,
                          controller: _password,
                          cursorColor: Colors.grey,
                          textAlign: TextAlign.center,
                          obscureText: _passwordVisible,
                          enableSuggestions: false,
...
