...
}

class TMDBData{

  //https://api.themoviedb.org/3/watch/providers/movie?api_key=<api-key>&language=es-ES&watch_region=ES
  static const List<TMDBProvider> providers =[
    TMDBProvider(id: 8, name: "Netflix"),
    TMDBProvider(id: 119, name: "Amazon"),
    TMDBProvider(id: 350, name: "Apple TV"),
    TMDBProvider(id: 337, name: "Disney +"),
    TMDBProvider(id: 2241, name: "Movistar +"),
    TMDBProvider(id: 35, name: "Rakuten TV"),
    TMDBProvider(id: 1773, name: "SkyShowtime"),
...
