...
                      ),
                  ),
                ),
                SizedBox(width: screenWidth * 0.03),
            Expanded(
            child: TextFormField(
              key: const Key('usernameField'),
              controller: _username,
              validator:  (value) => CheckUsername().check(value),
              cursorColor: Colors.grey,
              textAlign: TextAlign.center,
              style: TextStyle(
                color: Colors.black,
...
                    ),
                ),
              ),
              SizedBox(width: screenWidth * 0.03),
            Expanded(
            child: TextFormField(
              key: const Key('nameField'),
              controller: _name,
              validator:  (value) => value == null || value.isEmpty ? context.lang.campo_obligatorio : null,
              cursorColor: Colors.grey,
              textAlign: TextAlign.center,
              style: TextStyle(
                color: Colors.black,
...
                    ),
                ),
              ),
              SizedBox(width: screenWidth * 0.03),
            Expanded(
            child: TextFormField(
              key: const Key('emailField'),
              controller: _email,
              validator:  (value) => CheckEmail().check(value),
              cursorColor: Colors.grey,
              textAlign: TextAlign.center,
              style: TextStyle(
                color: Colors.black,
...
            ),
            ),
            ),
          SizedBox(width: screenWidth * 0.03),
          Expanded(
            child: TextFormField(
              key: const Key('passwordField'),
              validator:  (value) {
                if (value == null || value.isEmpty) return context.lang.campo_obligatorio;
                return CheckPassword().check(value);
              },
              controller: _password,
              cursorColor: Colors.grey,
...
              ),
              ),
              ),
            SizedBox(width: screenWidth * 0.03),
            Expanded(
            child: TextFormField(
              key: const Key('password2Field'),
              controller: _password2,
              validator:  (value) {
                if (value == null || value.isEmpty) return context.lang.campo_obligatorio;
                if (value != _password.text) return context.lang.contras_no_coinciden;
                return null;
              },
...
